@@ -1,3 +1,6 @@
+23 January 2012: Wouter
+	- remove clang warning from region_log_stats().
+
 20 January 2012: Wouter
 	- Fix bug #430: segfault when MAX_INTERFACES set to more than 65K.
 	- Fix configure.ac strptime check for gcc 4.6.2, acx_nlnetlabs update.
